[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.coverage.run]
parallel = true
branch = true
source = ["mvdef"]

[tool.isort]
profile = "black"

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pdm]
version = {path = "src/mvdef/__init__.py", source = "file"}

[tool.pdm.dev-dependencies]
ci = ["tox", "tox-pdm", "tox-gh-actions"]
# dev = tests + docs + pre-commit
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material[recommended,imaging]>=9.5.2",
    "mkdocstrings[python]>=0.24.0",
]
tests = ["coverage[toml]>=5.5", "pytest", "tox"]

[tool.pytest.ini_options]
markers = [
    "skiponci: tests that should not run on CI (e.g. related to CLI display that don't run consistently",
]

[project]
authors = [
    {email = "louismmx@gmail.com", name = "Louis Maddox"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "argcomplete",
    "astor",
    "asttokens",
    "defopt",
    "pyflakes",
    "urllib3<2",
]
description = "Package providing command line tools to move/copy function/classes and their associated import statements between files."
dynamic = ["version"]
keywords = [
    "ast",
]
license = {text = "MIT"}
name = "mvdef"
readme = "README.md"
requires-python = ">=3.10,<3.12"


[project.scripts]
mvdef = "mvdef.cli:cli_move"
cpdef = "mvdef.cli:cli_copy"
lsdef = "mvdef.cli:cli_list"
oldmvdef = "mvdef.legacy.__main__:main"
oldmvcls = "mvdef.legacy.__main__:mvcls"
oldcpdef = "mvdef.legacy.__main__:cpdef"
oldcpcls = "mvdef.legacy.__main__:cpcls"

[project.urls]
Documentation = "https://mvdef.vercel.app/"
Homepage = "https://github.com/lmmx/mvdef"
Repository = "https://github.com/lmmx/mvdef.git"
