[build-system]
build-backend = "uv_build"
requires = [
  "uv_build>=0.9.26,<0.10.0"
]

[dependency-groups]
ci = [
  "tox",
  "tox-gh-actions",
  "tox-pdm"
]
dev = [
  "pre-commit>=4.1.0"
]
docs = [
  "mkdocs-material[imaging,recommended]>=9.5.2",
  "mkdocs-section-index>=0.3.8",
  "mkdocs>=1.5.3",
  "mkdocstrings[python]>=0.24.0"
]
tests = [
  "coverage[toml]>=5.5",
  "pytest",
  "tox"
]

[project]
authors = [
  {email = "louismmx@gmail.com", name = "Louis Maddox"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python"
]
dependencies = [
  "argcomplete",
  "astor",
  "asttokens",
  "defopt",
  "pyflakes"
]
description = "Package providing command line tools to move/copy function/classes and their associated import statements between files."
name = "mvdef"
readme = "README.md"
requires-python = ">=3.10,<3.12"
version = "0.0.0" # TODO: sync with src/mvdef/__init__.py

[project.license]
text = "MIT"

[project.scripts]
cpdef = "mvdef.cli:cli_copy"
lsdef = "mvdef.cli:cli_list"
mvdef = "mvdef.cli:cli_move"
oldcpcls = "mvdef.legacy.__main__:cpcls"
oldcpdef = "mvdef.legacy.__main__:cpdef"
oldmvcls = "mvdef.legacy.__main__:mvcls"
oldmvdef = "mvdef.legacy.__main__:main"

[project.urls]
Documentation = "https://mvdef.vercel.app/"
Homepage = "https://github.com/lmmx/mvdef"
Repository = "https://github.com/lmmx/mvdef.git"

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
parallel = true
source = ["mvdef"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
  "skiponci: tests that should not run on CI (e.g. CLI display issues)"
]

[tool.uv]
default-groups = "all"
